--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@cashu/cashu-ts": "file:../cashu-ts",
+    "@cashu/cashu-ts": "^1.2.1-rc.0",
     "@reduxjs/toolkit": "^2.3.0",
     "nostr-tools": "^2.8.1",
     "react": "^18.3.1",
