--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cashu/cashu-ts": "^1.2.1-rc.0",
+    "@gandlaf21/bc-ur": "^1.1.12",
     "@noble/hashes": "^1.5.0",
     "@reduxjs/toolkit": "^2.3.0",
     "nostr-tools": "^2.8.1",
